<resources>
    <string name="app_name">BarrierFree</string>

    <string name='app_back'>back</string>

    <!--message-->\' .
    <string name="msg_app_exit">Click the \'back\'button once more to finish.</string>
    <string name="msg_server_error">Bad connection to the server.</string>
    <string name="msg_permission_need">You must grant all permissions before you can use the service.</string>

    <string name="permission_title">Permission Need</string>
    <string name="permission_re">Permission Regrant</string>

    <string name="app_exit">Exit</string>


    <!--map-->
    <string name="map_input_hint">Where to?</string>

    <!--tts-->
    <string name="tts_need">Please talk your destination</string>
    <string name="tts_destination">Tell me your\ndestination</string>
    <string name="tts_listening">I\'m listening</string>

    <!--start-->
    <string name="start_destination">Destination</string>
    <string name="start_arrival">arrival</string>
    <string name="start_min">min</string>
    <string name="start_km">km</string>
    <string name="start_bus_stop">Bus stop</string>
    <string name="start_bus_info">Bus info</string>
    <string name="start_walkway">Walkway</string>
    <string name="start_list">List</string>
    <string name="start_overview">Overview</string>
    <string name="start_end">End</string>
    <string name="start_navigate">Navigate</string>




</resources>