<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_back">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/basic_back"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/start_info_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:text="@string/start_destination"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/basic_600"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="114dp"
                android:text="Gangnam st."
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/start_info_box"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:text="11:28"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_200"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/start_arrival"
                    android:textSize="16dp"
                    android:textColor="@color/basic_500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="65"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_200"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_min"
                    android:textSize="16dp"
                    android:textColor="@color/basic_500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="1.6"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_200"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_km"
                    android:textSize="16dp"
                    android:textColor="@color/basic_500"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/start_info_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/start_bus_stop"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/basic_600"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="114dp"
                android:text="Hapjeong st."
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp">
                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/start_bus_info"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_600"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5071"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_bright"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Green bus"
                    android:layout_marginStart="8dp"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_green"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="334dp">
            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:src="@drawable/ic_polygon_3"
                    android:layout_width="72dp"
                    android:layout_height="68dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="69dp"/>
                <ImageView
                    android:src="@drawable/ic_polygon_1"
                    android:layout_width="90dp"
                    android:layout_height="84dp"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="38dp"/>
                <ImageView
                    android:src="@drawable/ic_polygon_5"
                    android:layout_width="106dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="9dp" />
                <ImageView
                    android:src="@drawable/ic_polygon_4"
                    android:layout_width="32dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="9dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="163dp"
                android:text="371m"
                android:gravity="center_horizontal"
                android:textSize="64dp"
                android:lineHeight="96dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/basic_accent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="241dp"
                android:text="@string/start_walkway"
                android:gravity="center_horizontal"
                android:textSize="28dp"
                android:lineHeight="42dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/basic_accent"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="78dp"
                    android:layout_height="78dp">
                    <Button
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:paddingStart="16dp"
                        android:background="@drawable/yellow_transparent_circle"
                        android:onClick="ListClicked"/>
                    <ImageView
                        android:src="@drawable/ic_list_1"
                        android:layout_width="39dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/start_list"
                    android:gravity="center_horizontal"
                    android:textSize="18dp"
                    android:lineHeight="27dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_bright"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="78dp"
                    android:layout_height="78dp">
                    <Button
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:paddingStart="16dp"
                        android:background="@drawable/yellow_transparent_circle"
                        android:onClick="OverviewClicked"/>
                    <ImageView
                        android:src="@drawable/ic_overview"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/start_overview"
                    android:gravity="center_horizontal"
                    android:textSize="18dp"
                    android:lineHeight="27dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_bright"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="78dp"
                    android:layout_height="78dp">
                    <Button
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:paddingStart="16dp"
                        android:background="@drawable/red_transparent_circle"
                        android:onClick="EndClicked"/>
                    <ImageView
                        android:src="@drawable/ic_end"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/start_end"
                    android:gravity="center_horizontal"
                    android:textSize="18dp"
                    android:lineHeight="27dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_bright"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
