<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_back">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/start_bus_stop"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/basic_600"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="114dp"
                android:text="Hapjeong st."
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="54dp">
                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/start_bus_info"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_600"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5071"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_bright"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Green bus"
                    android:layout_marginStart="8dp"
                    android:lineHeight="39dp"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    android:textColor="@color/basic_green"/>
            </LinearLayout>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="78dp"
                android:layout_height="78dp">
                <Button
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@color/transparent"
                    android:onClick="NavigateClicked"/>
                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@drawable/yellow_filled_circle"/>
                <ImageView
                    android:src="@drawable/ic_navigate"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/start_navigate"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:lineHeight="27dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="78dp"
                android:layout_height="78dp">
                <Button
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@color/transparent"
                    android:onClick="OverviewClicked"/>
                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@drawable/yellow_filled_circle"/>
                <ImageView
                    android:src="@drawable/ic_overview"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/start_overview"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:lineHeight="27dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="78dp"
                android:layout_height="78dp">
                <Button
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@color/transparent"
                    android:onClick="EndClicked"/>
                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:paddingStart="16dp"
                    android:background="@drawable/red_filled_circle"/>
                <ImageView
                    android:src="@drawable/ic_end"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/start_end"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:lineHeight="27dp"
                android:textStyle="bold"
                android:textColor="@color/basic_bright"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
